--- a/src/Pages/Shared/BookingModal/BookingModal.css
+++ b/src/Pages/Shared/BookingModal/BookingModal.css
@@ -3,8 +3,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 600px;
+  width: 100%;
   max-width: 600px;
+  z-index: 200;
 }
 
 .overlay {
@@ -12,6 +13,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #1e293b36;
+  z-index: 100;
 }
